# manifest

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md  build.rs  manifest.py  manifest.yml  treecrypt.py
.github/workflows/: release.yml
docs/design/: 2026-01-24-manifest-age-subcommand.md  2026-03-08-age-subcommand-restructure.md  2026-03-20-xdg-config-and-repo-discovery.md  2026-04-17-link-dirs-subfield.md  2026-06-27-clipboard-age-encryption-implementation-notes.md  2026-06-27-clipboard-age-encryption.md  2026-06-27-clipboard-encrypt-handoff.md
src/: age.rs  cli.rs  config.rs  fuzzy.rs  main.rs  manifest.rs
src/scripts/: latest.sh  linker.sh
test/: README.md  manifest.yml
