[package]
name = "manifest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.11.7"
eyre = "0.6.12"
glob = "0.3.2"
log = "0.4.26"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
