[package]
name = "manifest"
version = "0.1.0"
edition = "2024"
description = "A tool for managing system configurations and installations via YAML manifests"
license = "MIT"
repository = "https://github.com/scottidler/manifest"
homepage = "https://github.com/scottidler/manifest"
documentation = "https://github.com/scottidler/manifest"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
eyre = "0.6.12"
glob = "0.3.2"
log = "0.4.27"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"
colored = "3.0"

[build-dependencies]
regex = "1"
